--- a/GestaoPedidosPayment/appsettings.json
+++ b/GestaoPedidosPayment/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDBSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://admin:password@mongo_db:27017/",
     "DatabaseName": "GestaoPedidosPayment"
   }
 }
