--- a/GestaoPedidosPayment/appsettings.json
+++ b/GestaoPedidosPayment/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDBSettings": {
-    "ConnectionString": "mongodb://admin:password@mongo_db:27017/",
     "DatabaseName": "GestaoPedidosPayment"
-  }
+  },
+  "MongoConnectionString": "",
+  "WebHookUrl": ""
 }
