--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: gestao-pedidos-payment
           image: gestaopedidospayment:latest
-          imagePullPolicy: Never
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
             - containerPort: 8081
