--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Update app-deployment.yaml
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: 'k8s/app-deployment.yaml'
+          propertyPath: 'spec.template.spec.containers[0].env'
+          value: |
+            - name: WebHookUrl
+              value: "${{ secrets.WEBHOOK_URL }}"
+            - name: MongoConnectionString
+              value: "${{ secrets.MONGODB_CONNECTION_STRING }}"
+          commitChange: false
+
       - name: AWS Configure
         uses: aws-actions/configure-aws-credentials@v4
         with:
