--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -50,5 +50,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"VictorHSL_GestaoPedidosPayment" /o:"victorhsl" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build GestaoPedidosPayment.sln --no-incremental
+          dotnet build Tests/GestaoPedidosPaymentTests.csproj --no-incremental
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
