--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -51,5 +51,5 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"VictorHSL_GestaoPedidosPayment" /o:"victorhsl" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build GestaoPedidosPayment.sln --no-incremental
-          dotnet test Tests/GestaoPedidosPaymentTests.csproj --collect:“Code Coverage”
+          dotnet test Tests/GestaoPedidosPaymentTests.csproj --collect:"Code Coverage"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
