--- a/Tests/GestaoPedidosPaymentTests.csproj
+++ b/Tests/GestaoPedidosPaymentTests.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="Mongo2Go" Version="4.1.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
