Add sonar quality gate param

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -49,7 +49,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"VictorHSL_GestaoPedidosPayment" /o:"victorhsl" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"VictorHSL_GestaoPedidosPayment" /o:"victorhsl" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.qualitygate.wait=true
           dotnet tool install --global dotnet-coverage
           dotnet build GestaoPedidosPayment.sln --no-incremental
           dotnet-coverage collect 'dotnet test Tests/GestaoPedidosPaymentTests.csproj' -f xml -o 'coverage.xml'
