--- a/Tests/GestaoPedidosPaymentTests.csproj
+++ b/Tests/GestaoPedidosPaymentTests.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="8.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="Mongo2Go" Version="4.1.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
